crates/toml/tests/snapshots/invalid/inline-table/linebreak-04.stderr
TOML parse error at line 1, column 14
  |
1 | json_like = {
  |              ^
newlines are unsupported in inline tables, expected nothing
